--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "file-saver": "^2.0.5",
+    "google-libphonenumber": "^3.2.40",
+    "intl-tel-input": "^19.5.7",
     "ngx-intl-tel-input": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
